--- a/site/style/style.css
+++ b/site/style/style.css
@@ -106,6 +106,7 @@ body {
 .idea-6 span,
 .wish-hbd span {
   display: inline-block;
+  margin: 0;
 }
 
 .idea-6 span {
@@ -117,7 +118,8 @@ body {
 }
 
 .six img {
-  display: inline-block;
+  display: center;
+ 
   max-width: 100%;
   height: auto;
 }
@@ -214,6 +216,7 @@ body {
   font-size: 3em;
   margin: 0;
   text-transform: uppercase;
+  display: block;
 }
 
 .wish h5 {
@@ -230,6 +233,19 @@ body {
 #replay {
   z-index: 3;
   cursor: pointer;
+}
+.button {
+    display: block;
+    width: 115px;
+    height: 25px;
+    background: #4E9CAF;
+    font-size: 25px;
+    
+    border-radius: 5px;
+    color: white;
+    
+    
+    margin-left: 43%;
 }
 
 /* Media Queries */
